sample-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
  annotations:
    image.openshift.io/triggers: |-
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "openshift/hello-openshift:latest"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
  namespace: test
spec:
  selector:
    matchLabels:
      app: hello-openshift
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
        - name: hello-openshift
          image: openshift/hello-openshift
          ports:
            - containerPort: 8080
